# nonrad

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  coverage.yml
docs/: citation.rst  compatibility.rst  conf.py  index.rst  installation.rst  modules.rst  nonrad.ccd.rst  nonrad.constants.rst  nonrad.elphon.rst  nonrad.nonrad.rst  nonrad.rst  nonrad.scaling.rst  nonrad.tests.rst  nonrad.tests.test_ccd.rst  nonrad.tests.test_elphon.rst  nonrad.tests.test_nonrad.rst  nonrad.tests.test_scaling.rst  nonrad.tests.test_utils.rst  nonrad.utils.rst  rtd.txt  tips.rst  tutorial.rst
nonrad/: __init__.py  ccd.py  constants.py  elphon.py  nonrad.py  scaling.py  utils.py
nonrad/tests/: __init__.py  test_ccd.py  test_elphon.py  test_nonrad.py  test_scaling.py  test_utils.py
notebooks/: benchmarking.ipynb  tutorial.ipynb
test_files/: UNK.0  UNK.1
